Review and tidy solr/modules/sql code (#4840)